--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--<!DOCTYPE html>-->
+
 <html>
   <head>
   </head>
@@ -49,6 +51,9 @@
         </div>
       </div>
     </div>
+    <div style="z-index:99; position: absolute; display: none" >
+      <h1>MYTEST</h1>
+      <iframe id="my_youtube" width="560" height="315" src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?si=njqv8kJxVOG2LnU9&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="no-referrer-when-downgrade" allowfullscreen></iframe>    </div>
 
     <script src="js/game/myminesweeper_main.js"></script>
     <script src="js/game/Grid.js"></script>
