--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     </div>
     <div id="myytdiv" style="z-index:99; position: absolute; display: none" >
       <h1>MYTEST</h1>
+      <div id="player"></div>
+
       <iframe id="my_youtube" width="560" height="315" src='https://www.youtube.com/embed/dQw4w9WgXcQ?si=njqv8kJxVOG2LnU9?autoplay=1' title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="no-referrer-when-downgrade" allowfullscreen></iframe>    </div>
 
     <script src="js/game/myminesweeper_main.js"></script>
