--- a/index.html
+++ b/index.html
@@ -52,16 +52,13 @@
       </div>
     </div>
     <div id="myytdiv" style="z-index:99; position: absolute; display: none" >
-      <h1>MYTEST</h1>
       <div id="player"></div>
-
-      <iframe id="my_youtube" width="560" height="315" src='https://www.youtube.com/embed/dQw4w9WgXcQ?si=njqv8kJxVOG2LnU9?autoplay=1' title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="no-referrer-when-downgrade" allowfullscreen></iframe>    </div>
 
     <script src="js/game/myminesweeper_main.js"></script>
     <script src="js/game/Grid.js"></script>
     <script src="js/game/Cells.js"></script>
     <script src="js/myminesweeper.js"></script>
-        <script>
+    <script>
       // 2. This code loads the IFrame Player API code asynchronously.
       var tag = document.createElement('script');
 
@@ -76,7 +73,7 @@
         player = new YT.Player('player', {
           height: '390',
           width: '640',
-          videoId: 'M7lc1UVf-VE',
+          videoId: 'dQw4w9WgXcQ',
           playerVars: {
             'playsinline': 1
           },
