--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       // 3. This function creates an <iframe> (and YouTube player)
       //    after the API code downloads.
-      var player;
+      var player, iframe;
       function onYouTubeIframeAPIReady() {
         player = new YT.Player('player', {
           height: '390',
@@ -87,6 +87,7 @@
       // 4. The API will call this function when the video player is ready.
       function onPlayerReady(event) {
         event.target.playVideo();
+        iframe = $('#player');
       }
 
       // 5. The API calls this function when the player's state changes.
