--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
           <button id="restart">Restart</button>
         </div>
       </div>
+      <div id='myTimer' style="position:absolute; width:100; z-index:5; text-align:right;"></div>
     </div>
 
     <script src="js/game/myminesweeper_main.js"></script>
     <script src="js/game/Grid.js"></script>
     <script src="js/game/Cells.js"></script>
+    <script src="js/game/Timer.js"></script>
     <script src="js/myminesweeper.js"></script>
   </body>
   </html>
