--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
   </head>
-  <body>
+  <body style="background-color: lightblue;">
     <style>
       #restartoverlay {
       position: fixed; /* Sit on top of the page content */
@@ -17,7 +17,9 @@
 
       #container {
         position: relative;
-        left: 30;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
       }
       #container canvas, #restartoverlay {
         position: absolute;
@@ -29,26 +31,93 @@
       #rscontainer {
         position: absolute;
         margin: auto;
-        width: 50%;
+        width: 350;
         border: 3px solid green;
-        padding: 10px;
+        padding: 30px;
         top: 50%;
         left: 50%;
         -webkit-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
+        border-radius: 25px;
       }
+      datalist {
+        display: flex;
+        /*flex-direction: column;*/
+        justify-content: space-between;
+        /*writing-mode: vertical-lr;*/
+        width: 200px;
+      }
+
+ /*     option {
+        padding: 0;
+      }*/
+
+      input[type="range"] {
+        width: 200px;
+        margin: 0;
+      }
+      #restart {
+        position: relative;
+        margin: auto;
+        width: 50%;
+        height: 50;
+        left: 50%;
+        -webkit-transform: translate(-50%, 0);
+        transform: translate(-50%, 0);
+        background-color: olivedrab;
+        color: white;
+      }
+      #myTimer {
+        position:absolute;
+        width:100;
+        z-index:5;
+        text-align:right;
+        background-color: black;
+        color: wheat;
+        border-radius: 15px;
+        padding: 8;
+      }
+
 
     </style>
 
     <div id="container">
       <canvas id="mygamecanvas"></canvas>
       <div id="restartoverlay">
-        <div id="rscontainer">
-          Test
-          <button id="restart">Restart</button>
+        <div id="rscontainer" style="background: darkgoldenrod;">
+          <h1>New game</h1>
+          <form id="restartForm">
+            <div style="display:flex;">
+            <div>
+            <label for="Nx">Width:</label>
+            <input type="number" id="Nx" name="Nx" min="10" max="100" value="16">
+            </div>
+            <div style="position:relative; left:50;">
+            <label for="Ny">Height:</label>
+            <input type="number" id="Ny" name="Ny" min="10" max="80" value="16">
+            </div>
+            </div>
+            <div style="display:flex; margin-top:20;">
+            <label for="fracMines">Nmines:</label>
+            <div style="position:relative; left:20;">
+            <input type="range" id="fracMines" name="fracMines" min="0.01" max="0.5" step="0.01" value="0.15" list="fracMinesMarkers" />
+            <datalist id="fracMinesMarkers">
+              <!--<option value="0.1" label="10%"></option>-->
+              <!--<option value="0.3" label="30%"></option>-->
+              <!--<option value="0.5" label="50%"></option>-->
+              <option value="0.01" label="few"></option>
+              <option value="0.5"  label="many"></option>
+            </datalist>
+            </div>
+            </div>
+          </form>
+          <p>
+          <output id="restartOut"></output>
+          </p>
+          <button id="restart">Start</button>
         </div>
       </div>
-      <div id='myTimer' style="position:absolute; width:100; z-index:5; text-align:right;"></div>
+      <div id='myTimer'></div>
     </div>
 
     <script src="js/game/myminesweeper_main.js"></script>
