--- a/index.html
+++ b/index.html
@@ -67,23 +67,46 @@
         background-color: olivedrab;
         color: white;
       }
-      #myTimerContainer {
-        position: absolute;
-        right: 20;
-        top: 20;
-       /* width:100;*/
-        z-index:5;
-        text-align:right;
-        background-color: black;
-        color: wheat;
-        border-radius: 15px;
-        padding: 12;
-        align-items: center;
-        justify-content: center;
-        display: flex;
+      #myTimer {
+        order: 3;
+        padding: 7;
+        height: fit-content;
+        width: fit-content;
+        border-radius: 10px;
+        background: black;
+        color: white;
         font-family: monospace, monospace;
-        white-space:pre;
+        position: absolute;
+        right:0;
+        top: 50%;
+        transform: translate(0, -50%);
+        z-index: 6;
       }
+      #headerContainer {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 40;
+      }
+      #itemleft {
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translate(0, -50%);
+        width: 50;
+        height: 50;
+        z-index: 2;
+      }
+      #itemcenter {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 50;
+        height: 50;
+        z-index: 2;
+      }
+
 
 
     </style>
@@ -124,8 +147,12 @@
           <button id="restart">Start</button>
         </div>
       </div>
-      <div id="myTimerContainer">
-        <div id='myTimer'></div>
+      <div id="headerContainer">
+        <div id="myTimer">
+ 0:00:00
+        </div>
+        <div id="itemcenter"> </div>
+        <div id="itemleft"> </div>
       </div>
     </div>
 
