--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         font-family: monospace, monospace;
         z-index: 2;
       }
-      #itemcenter {
+      #SmileyDiv {
         position: absolute;
         left: 50%;
         top: 50%;
@@ -109,6 +109,17 @@
         width: 50;
         height: 50;
         z-index: 2;
+      }
+      #SmileyButton {
+        width: 50;
+        height: 50;
+        font-size: 30;
+        background: grey;
+        outline: 1px solid #000000;
+        background: #C0C0C0;
+        border-width: 1px;
+        border-style: solid;
+        border-color: #FFFFFF #808080 #808080 #FFFFFF;
       }
 
 
@@ -155,8 +166,10 @@
         <div id="myTimer">
           0:00:00
         </div>
-        <div id="itemcenter"> </div>
-        <div id="NminesDiv"> </div>
+        <div id="SmileyDiv">
+          <button id="SmileyButton">🙂</button>
+        </div>
+        <div id="NminesDiv"> N: 0 </div>
       </div>
     </div>
 
