--- a/index.html
+++ b/index.html
@@ -4,15 +4,9 @@
   <body style="background-color: lightblue;">
     <style>
       #restartoverlay {
-      position: fixed; /* Sit on top of the page content */
-      display: none; /* Hidden by default */
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: rgba(0,0,0,0.5); /* Black background with opacity */
-      z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-      cursor: pointer; /* Add a pointer on hover */
+        display: none; /* Hidden by default */
+        background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+        z-index: 2;
       }
 
       #container {
@@ -32,7 +26,7 @@
         position: absolute;
         margin: auto;
         width: 350;
-        border: 3px solid green;
+        border: 3px solid black;
         padding: 30px;
         top: 50%;
         left: 50%;
@@ -42,16 +36,9 @@
       }
       datalist {
         display: flex;
-        /*flex-direction: column;*/
         justify-content: space-between;
-        /*writing-mode: vertical-lr;*/
         width: 200px;
       }
-
- /*     option {
-        padding: 0;
-      }*/
-
       input[type="range"] {
         width: 200px;
         margin: 0;
@@ -147,9 +134,6 @@
             <div style="position:relative; left:20;">
             <input type="range" id="fracMines" name="fracMines" min="0.01" max="0.5" step="0.01" value="0.15" list="fracMinesMarkers" />
             <datalist id="fracMinesMarkers">
-              <!--<option value="0.1" label="10%"></option>-->
-              <!--<option value="0.3" label="30%"></option>-->
-              <!--<option value="0.5" label="50%"></option>-->
               <option value="0.01" label="few"></option>
               <option value="0.5"  label="many"></option>
             </datalist>
